--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">Primal</string>
 
     <string name="login_nsec">nsec</string>
+
+    <string name="feed_reposted_suffix">reposted</string>
+    
+    <string name="timestamp_since_just_now">just now</string>
+    <string name="timestamp_since_minutes">%1$s min. ago</string>
+    <string name="timestamp_since_hours">%1$s hr. ago</string>
+    <string name="timestamp_since_days">%1$s d. ago</string>
+    <string name="timestamp_since_weeks">%1$s wk. ago</string>
+    <string name="timestamp_since_months">%1$s m. ago</string>
+    <string name="timestamp_since_years">%1$s y. ago</string>
 </resources>
