Implement bottomBar and drawer navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,18 @@
     <string name="nsec">nsec</string>
     <string name="npub">npub</string>
 
+    <string name="primary_destination_feed_label">Feed</string>
+    <string name="primary_destination_read_label">Read</string>
+    <string name="primary_destination_explore_label">Explore</string>
+    <string name="primary_destination_messages_label">Messages</string>
+    <string name="primary_destination_notifications_label">Notifications</string>
+
+    <string name="drawer_destination_profile">Profile</string>
+    <string name="drawer_destination_bookmarks">Bookmarks</string>
+    <string name="drawer_destination_user_lists">User Lists</string>
+    <string name="drawer_destination_settings">Settings</string>
+    <string name="drawer_destination_sign_out">Sign Out</string>
+
     <string name="feed_reposted_suffix">reposted</string>
     
     <string name="timestamp_since_just_now">just now</string>
