--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="timestamp_since_years">%1$s y. ago</string>
 
     <string name="feed_list_title">My Nostr Feeds</string>
+    <string name="feed_error_loading_prev_page">Could not load previous page because of an error: %1$s</string>
+    <string name="feed_error_loading_next_page">Could not load next page because of an error: %1$s</string>
+
 </resources>
