--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,10 @@
     <string name="feed_error_loading_prev_page">Could not load previous page because of an error: %1$s</string>
     <string name="feed_error_loading_next_page">Could not load next page because of an error: %1$s</string>
 
+    <string name="feed_new_posts_notice_100plus">100+ new posts</string>
+    <plurals name="feed_new_posts_notice">
+        <item quantity="one">%1$s new post</item>
+        <item quantity="other">%1$s new posts</item>
+    </plurals>
+
 </resources>
