Implemented proof of concept ThreadScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
         <item quantity="other">%1$s new posts</item>
     </plurals>
 
+
+    <string name="thread_title">Thread</string>
 </resources>
