--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,18 @@
     <string name="welcome_create_account_button_title">Create account</string>
     <string name="welcome_create_account_button_subtitle">Your new Nostr account will be up and running in a minute.</string>
 
+    <string name="login_title">Sign in</string>
+    <string name="login_description">Paste your Nostr key to sign in:</string>
+    <string name="login_button_continue">Continue</string>
+    <string name="login_button_paste_key">Paste your key</string>
+    <string name="login_invalid_nsec_key">Please enter a valid Nostr key</string>
+    <string name="login_valid_nsec_key">Valid key confirmed</string>
+
+    <string name="logout_title">Sign out</string>
+    <string name="logout_description">Do you really want to sign out?</string>
+    <string name="logout_cancel_button">Cancel</string>
+    <string name="logout_button">Sign out</string>
+
     <string name="primary_destination_feed_label">Feed</string>
     <string name="primary_destination_read_label">Read</string>
     <string name="primary_destination_explore_label">Explore</string>
@@ -20,6 +32,8 @@
     <string name="drawer_destination_user_lists">User Lists</string>
     <string name="drawer_destination_settings">Settings</string>
     <string name="drawer_destination_sign_out">Sign Out</string>
+    <string name="drawer_followers_suffix">Followers</string>
+    <string name="drawer_following_suffix">Following</string>
 
     <string name="feed_reposted_suffix">reposted</string>
     
