--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,8 @@
 
     <string name="thread_title">Thread</string>
 
+    <string name="explore_title">Explore</string>
+
     <string name="settings_title">Settings</string>
     <string name="settings_keys_title">Keys</string>
     <string name="settings_keys_copy_public_key">Copy public key</string>
