--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,8 @@
     <string name="feed_list_title">My Nostr Feeds</string>
     <string name="feed_error_loading_prev_page">Could not load previous page because of an error: %1$s</string>
     <string name="feed_error_loading_next_page">Could not load next page because of an error: %1$s</string>
-    <string name="feed_no_content">No content for this feed.</string>
+    <string name="feed_no_content">No content found for this feed.</string>
+    <string name="feed_refresh_button">Refresh</string>
 
     <string name="feed_new_posts_notice_general">posted</string>
     <string name="feed_new_posts_notice_100plus">100+ new posts</string>
