--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,11 @@
     <string name="post_repost_button_confirmation">Repost</string>
     <string name="post_quote_button_confirmation">Quote</string>
 
+    <string name="new_post_publish_button">Post</string>
+    <string name="new_post_publishing_button">Posting…</string>
+    <string name="new_post_content_placeholder">Type your post here…</string>
+    <string name="new_post_nostr_publish_error">We were unable to publish your post to Nostr. Please try again shortly. Error: %1$s</string>
+
     <string name="thread_title">Thread</string>
 
     <string name="explore_title">Explore</string>
