--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="drawer_following_suffix">Following</string>
 
     <string name="feed_reposted_suffix">reposted</string>
+    <string name="feed_see_more">See more…</string>
 
     <string name="timestamp_since_just_now">just now</string>
     <string name="timestamp_since_minutes">%1$s min. ago</string>
