Implement follow/unfollow button on profile screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,6 @@
     <string name="profile_following_stat">following</string>
     <string name="profile_followers_stat">followers</string>
     <string name="profile_notes_stat">posts</string>
+    <string name="profile_follow_button">follow</string>
+    <string name="profile_unfollow_button">unfollow</string>
 </resources>
