Changes according to comments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="post_action_zap_failed">Failed to zap.</string>
     <string name="post_action_like_failed">Failed to like.</string>
     <string name="post_action_repost_failed">Failed to repost.</string>
+    <string name="post_action_reply_failed">Failed to reply.</string>
 
     <string name="thread_title">Thread</string>
     <string name="thread_reply_to">Reply to %1$s</string>
