--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,11 @@
     <string name="settings_notifications_title">Notifications</string>
     <string name="settings_network_title">Network</string>
     <string name="settings_feeds_title">Feeds</string>
+
     <string name="settings_zaps_title">Zaps</string>
+    <string name="settings_zaps_default_zap_amount_header">Set default zap amount</string>
+    <string name="settings_zaps_custom_zaps_header">Set custom zap amounts</string>
+
     <string name="settings_version_title">Version</string>
 
     <string name="profile_following_stat">following</string>
