--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,4 +123,6 @@
     <string name="profile_notes_stat">posts</string>
     <string name="profile_follow_button">follow</string>
     <string name="profile_unfollow_button">unfollow</string>
+
+    <string name="zap_settings_comment_placeholder">Add a comment…</string>
 </resources>
