--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,10 +69,10 @@
 
     <string name="post_action_missing_lightning_address">Unable to zap this user since they don\'t have a lightning address set up.</string>
     <string name="post_action_malformed_lightning_address">Unable to zap this user since their lightning address is malformed.</string>
-    <string name="post_action_zap_failed">Failed to zap.</string>
-    <string name="post_action_like_failed">Failed to like.</string>
-    <string name="post_action_repost_failed">Failed to repost.</string>
-    <string name="post_action_reply_failed">Failed to reply.</string>
+    <string name="post_action_zap_failed">Unable to zap. Please try again.</string>
+    <string name="post_action_like_failed">Unable to like. Please try again.</string>
+    <string name="post_action_repost_failed">Unable to repost. Please try again.</string>
+    <string name="post_action_reply_failed">Unable to reply. Please try again.</string>
 
     <string name="thread_title">Thread</string>
     <string name="thread_reply_to">Reply to %1$s</string>
