--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="npub">npub</string>
 
     <string name="app_generic_error">Something went wrong. Please try again.</string>
+    <string name="app_missing_relays_config">No relays found. Please configure your Network.</string>
 
     <string name="welcome_sign_in_button_title">Sign in</string>
     <string name="welcome_sign_in_button_subtitle">Already have a Nostr account? Sign with your Nostr key.</string>
@@ -128,6 +129,8 @@
     <string name="profile_notes_stat">posts</string>
     <string name="profile_follow_button">follow</string>
     <string name="profile_unfollow_button">unfollow</string>
+    <string name="profile_error_unable_to_follow">Unable to follow profile. Please try again.</string>
+    <string name="profile_error_unable_to_unfollow">Unable to unfollow profile. Please try again.</string>
 
     <string name="zap_bottom_sheet_comment_placeholder">Add a comment…</string>
     <string name="zap_bottom_sheet_zap_button">Zap</string>
