--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,12 +15,14 @@
     <string name="create_title_new_account">New Account</string>
     <string name="create_title_profile_preview">Profile Preview</string>
     <string name="create_title_nostr_account_created">Nostr Account Created</string>
+    <string name="create_title_people_to_follow">People to Follow</string>
     <string name="create_set_banner">set banner</string>
     <string name="create_change_banner">change banner</string>
     <string name="create_set_avatar">set avatar</string>
     <string name="create_change_avatar">change avatar</string>
     <string name="create_action_next">Next</string>
     <string name="create_action_create_nostr_account">Create Nostr Account</string>
+    <string name="create_action_find_people_to_follow">Find people to follow</string>
     <string name="create_action_finish">Finish</string>
     <string name="create_success_subtitle">Your Nostr account has been created!</string>
     <string name="create_finish_subtitle">Your Nostr key is safely stored on your phone. You can access it in app settings.</string>
