--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_missing_relays_config">No relays found. Please configure your Network.</string>
     <string name="app_error_loading_prev_page">Unable to load newer content. Please try again.</string>
     <string name="app_error_loading_next_page">Unable to load older content. Please try again.</string>
+    <string name="app_failed_to_upload_image">Failed to upload image. Please try again.</string>
 
     <string name="welcome_sign_in_button_title">Sign in</string>
     <string name="welcome_sign_in_button_subtitle">Already have a Nostr account? Sign with your Nostr key.</string>
@@ -207,6 +208,8 @@
     <string name="profile_edit_profile_button">edit profile</string>
     <string name="profile_error_unable_to_follow">Unable to follow profile. Please try again.</string>
     <string name="profile_error_unable_to_unfollow">Unable to unfollow profile. Please try again.</string>
+    <string name="profile_failed_to_publish_metadata">Unable to post edited metadata. Please try again.</string>
+    <string name="profile_save_profile_button">Save profile</string>
 
     <string name="zap_bottom_sheet_comment_placeholder">Add a comment…</string>
     <string name="zap_bottom_sheet_zap_button">Zap</string>
