--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_missing_relays_config">No relays found. Please configure your Network.</string>
     <string name="app_error_loading_prev_page">Unable to load newer content. Please try again.</string>
     <string name="app_error_loading_next_page">Unable to load older content. Please try again.</string>
+    <string name="app_failed_to_upload_image">Failed to upload image. Please try again.</string>
 
     <string name="welcome_sign_in_button_title">Sign in</string>
     <string name="welcome_sign_in_button_subtitle">Already have a Nostr account? Sign with your Nostr key.</string>
@@ -33,12 +34,12 @@
     <string name="create_recommended_follow_all">Follow all</string>
     <string name="create_recommended_unfollow_all">Unfollow all</string>
     <string name="create_subtitle_profile_preview">We will use this info to create your Nostr account. If you wish to make any changes, you can always do so in your profile settings.</string>
-    <string name="create_input_header_display_name">DISPLAY NAME</string>
-    <string name="create_input_header_handle">HANDLE</string>
-    <string name="create_input_header_website">WEBSITE</string>
-    <string name="create_input_header_about_me">ABOUT ME</string>
-    <string name="create_input_header_bitcoin_lightning_address">BITCOIN LIGHTNING ADDRESS</string>
-    <string name="create_input_header_nip_05">NOSTR VERIFICATION (NIP 05)</string>
+    <string name="create_input_header_display_name">Display name</string>
+    <string name="create_input_header_handle">Username</string>
+    <string name="create_input_header_website">Website</string>
+    <string name="create_input_header_about_me">About me</string>
+    <string name="create_input_header_bitcoin_lightning_address">Bitcoin lighting address</string>
+    <string name="create_input_header_nip_05">Nostr verification (NIP 05)</string>
 
     <string name="login_title">Sign in</string>
     <string name="login_description">Paste your Nostr key to sign in:</string>
@@ -204,8 +205,12 @@
     <string name="profile_notes_stat">posts</string>
     <string name="profile_follow_button">follow</string>
     <string name="profile_unfollow_button">unfollow</string>
+    <string name="profile_edit_profile_button">edit profile</string>
     <string name="profile_error_unable_to_follow">Unable to follow profile. Please try again.</string>
     <string name="profile_error_unable_to_unfollow">Unable to unfollow profile. Please try again.</string>
+    <string name="profile_failed_to_publish_metadata">Unable to post edited metadata. Please try again.</string>
+    <string name="profile_save_profile_button">Save profile</string>
+    <string name="profile_edit_profile_title">Edit Profile</string>
 
     <string name="zap_bottom_sheet_comment_placeholder">Add a comment…</string>
     <string name="zap_bottom_sheet_zap_button">Zap</string>
