--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,6 +225,7 @@
     <string name="profile_edit_profile_title">Edit Profile</string>
     <string name="profile_context_add_user_feed">Add user feed</string>
     <string name="profile_context_share_profile">Share user profile</string>
+    <string name="profile_user_feed_title">%1$s\'s feed</string>
 
     <string name="zap_bottom_sheet_comment_placeholder">Add a comment…</string>
     <string name="zap_bottom_sheet_zap_button">Zap</string>
