--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="app_failed_to_upload_image">Failed to upload image. Please try again.</string>
     <string name="app_error_adding_to_feed">Unable to add selected feed to your feeds. Please try again.</string>
     <string name="app_error_removing_feed">Unable to remove selected feed from your feeds. Please try again.</string>
+    <string name="app_added_to_user_feeds">Added to your home feeds</string>
+    <string name="app_removed_from_user_feeds">Removed from your home feeds</string>
 
     <string name="welcome_sign_in_button_title">Sign in</string>
     <string name="welcome_sign_in_button_subtitle">Already have a Nostr account? Sign with your Nostr key.</string>
@@ -125,8 +127,6 @@
 
     <string name="explore_search_nostr">search nostr</string>
     <string name="explore_enter_query">Enter text to search</string>
-    <string name="explore_feed_added_to_user_feeds">Added to your home feeds</string>
-    <string name="explore_feed_removed_from_user_feeds">Removed from your home feeds</string>
 
     <string name="notifications_title">Notifications</string>
     <string name="notifications_no_content">No notifications.</string>
