--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,7 @@
 
     <string name="new_post_publish_button">Post</string>
     <string name="new_post_publishing_button">Posting…</string>
+    <string name="new_post_uploading_attachments">Uploading…</string>
     <string name="new_post_content_placeholder">Type your post here…</string>
     <string name="new_post_nostr_publish_error">Unable to publish your note to Nostr. Please try again soon.</string>
 
