--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,6 +216,8 @@
     <string name="settings_zaps_default_zap_amount_header">Set default zap amount</string>
     <string name="settings_zaps_custom_zaps_header">Set custom zap amounts</string>
 
+    <string name="settings_muted_accounts_title">Muted Accounts</string>
+
     <string name="settings_version_title">Version</string>
 
     <string name="profile_following_stat">following</string>
