--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,7 +212,7 @@
     <string name="settings_network_title">Network</string>
     <string name="settings_feeds_title">Feeds</string>
     <string name="settings_feeds_list_title">Your Nostr feeds</string>
-    <string name="settings_feeds_restore_default_title">restore defaults</string>
+    <string name="settings_feeds_restore_default_title">Restore Defaults</string>
 
     <string name="settings_zaps_title">Zaps</string>
     <string name="settings_zaps_default_zap_amount_header">Set default zap amount</string>
