--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,9 +210,14 @@
     <string name="settings_appearance_title">Appearance</string>
     <string name="settings_appearance_theme_section_title">Theme</string>
     <string name="settings_network_title">Network</string>
+
     <string name="settings_feeds_title">Feeds</string>
     <string name="settings_feeds_list_title">Your Nostr feeds</string>
     <string name="settings_feeds_restore_default_title">Restore Defaults</string>
+    <string name="settings_feeds_remove_feed_prompt_title">Remove feed?</string>
+    <string name="settings_feeds_remove_feed_prompt_text">Are you sure you want to remove %1$s\?</string>
+    <string name="settings_feeds_restore_defaults_prompt_title">Remove defaults?</string>
+    <string name="settings_feeds_restore_defaults_prompt_text">Are you sure you want to restore your feeds to default values?</string>
 
     <string name="settings_zaps_title">Zaps</string>
     <string name="settings_zaps_default_zap_amount_header">Set default zap amount</string>
